[package]
name = "aerosol"
version = "1.0.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
description = "Simple dependency injection for Rust"
repository = "https://github.com/Diggsey/aerosol"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
async = ["async-trait"]
axum = ["dep:axum", "async", "tracing", "thiserror"]
axum-extra = ["axum", "dep:axum-extra"]

[dependencies]
parking_lot = "0.12.1"
anymap = { package = "anymap3", version = "1.0.0", features = ["hashbrown"] }
async-trait = { version = "0.1", optional = true }
axum = { version = "0.8.0", optional = true }
axum-extra = { version = "0.10.0", optional = true, features = [
    "cookie-private",
] }
tracing = { version = "0.1", optional = true }
thiserror = { version = "1.0", optional = true }
anyhow = { version = "1.0" }
frunk = "0.4.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
