[package]
name = "aerosol"
version = "1.3.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
description = "Simple dependency injection for Rust"
repository = "https://github.com/Diggsey/aerosol"
license = "MIT OR Apache-2.0"
rust-version = "1.78.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
async = ["async-trait"]
axum = ["dep:axum", "async", "tracing", "thiserror", "anyhow/std"]
axum-extra = ["axum", "dep:axum-extra"]
aide = ["dep:aide"]

[dependencies]
parking_lot = "0.12.1"
anymap = { package = "anymap3", version = "1.0.0", features = ["hashbrown"] }
async-trait = { version = "0.1", optional = true }
axum = { version = "0.8.4", default-features = false, optional = true }
axum-extra = { version = "0.10.1", default-features = false, optional = true, features = [
    "cookie-private",
] }
tracing = { version = "0.1", default-features = false, optional = true }
thiserror = { version = "1.0", default-features = false, optional = true }
anyhow = { version = "1.0", default-features = false }
frunk = { version = "0.4.2", default-features = false }
aide = { version = "0.15", optional = true, default-features = false, features = [
    "axum",
] }
time = "=0.3.41" # time 0.3.42 and up require rustc 1.81.0

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "time", "rt"] }
